--- a/ui/admin/package.json
+++ b/ui/admin/package.json
@@ -15,9 +15,11 @@
   "dependencies": {
     "@element-plus/icons-vue": "^2.3.1",
     "axios": "^1.13.5",
+    "echarts": "^6.0.0",
     "element-plus": "^2.9.5",
     "pinia": "^3.0.1",
     "vue": "^3.5.13",
+    "vue-echarts": "^8.0.1",
     "vue-i18n": "^9.14.5",
     "vue-router": "^4.5.0"
   },
