Add 2FA trusted device feature with configurable duration
Allow users to trust a device after successful 2FA verification,
skipping 2FA on subsequent logins for a configurable number of days
(default 7). Trust tokens are stored in the database and delivered
via HttpOnly cookie. Trusted devices are invalidated when 2FA is
disabled or reset.

--- a/config/config.yaml
+++ b/config/config.yaml
@@ -44,6 +44,8 @@ security:
   admin-recovery-key: ""
   # Only allow 2FA recovery from localhost (default: true)
   admin-recovery-local-only: true
+  # Days to trust a device after successful 2FA (default: 7, set 0 to disable)
+  trusted-device-days: 7
 
   # CORS configuration
   cors:
