Runtime config injection for frontend
Backend injects window.__APP_CONFIG__ into index.html at startup so
pre-built binaries work across deployments without rebuilding frontend.

- baseURL and guardDomain are runtime-changeable via config.yaml
  (wall.backend-host, wall.guard-domain)
- Paths (root-path, admin-path, guard-path) remain build-time only
  (set via .env, baked into Vite base)
- Remove BackendHost constant; default baseURL to rootPath (same-origin)
- Server port now readable from config.yaml (server.port)
- Clean up Dockerfile/build.sh to remove build-time BACKEND_HOST

--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,4 @@
-BACKEND_HOST=http://localhost:9999/wall
+# Build-time paths — must match frontend Vite build (changing requires rebuild)
 ROOT_PATH=/wall
-GUARD_PATH=/guard
-GUARD_DOMAIN=
 ADMIN_PATH=/admin
-PORT=9999
+GUARD_PATH=/guard
